--- a/Backend/static/provider_register_styles.css
+++ b/Backend/static/provider_register_styles.css
@@ -44,6 +44,7 @@ body, html {
 .heading {
     flex: 1; /* Take up available space */
     display: flex; /* Use flexbox for alignment */
+    flex-direction: column;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
     width: 30%;
@@ -54,7 +55,8 @@ body, html {
     font-size: 2.75em;
     color: var(--light-primary);
     width: 50%;
-    padding-bottom: 10%;
+    padding-left: 15%;
+    margin-bottom: 0px;
 }
 
 .content {
@@ -129,3 +131,25 @@ body, html {
     color: #e0dddd; 
     font-family: monospace; 
 }
+
+.login_line {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: x-large;
+}
+
+.login_line button {
+    background: none;
+    border: none;
+    color: var(--light-primary);
+    font-size: large;
+    padding: 0;
+    cursor: pointer;
+    appearance: none;
+    margin: 5px;
+    text-decoration: underline;
+}
+
+
