--- a/Backend/templates/Provider.html
+++ b/Backend/templates/Provider.html
@@ -19,7 +19,7 @@
             <p>Welcome Provider {{username}}</p>
             <p>Id: {{userid}}</p>
 
-            <form action="/login" method='POST'>
+            <form action="/" method='POST'>
                 <input type="hidden" name="todo" value=99>
                 <button>Logout</button>
             </form>
