--- a/Backend/templates/admin_funct.html
+++ b/Backend/templates/admin_funct.html
@@ -18,7 +18,7 @@
             <p>Welcome Admin {{username}}</p>
             <p>Id:{{userid}}</p>
 
-            <form action="/login" method='POST'>
+            <form action="/" method='POST'>
                 <input type="hidden" name="todo" value=99>
                 <button>Logout</button>
             </form>
