--- a/Backend/templates/prov_funct.html
+++ b/Backend/templates/prov_funct.html
@@ -16,7 +16,7 @@
         <div class="hello">
             <p>Welcome Provider {{ username }} !</p>
             <p>Id:{{userid}}</p>
-            <form action="/login" method='POST'>                
+            <form action="/" method='POST'>                
                 <button>Logout</button>
             </form>
         </div>
