--- a/Backend/templates/User_deleted.html
+++ b/Backend/templates/User_deleted.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Succesfully deleted {{userid}}</h1>
-    <form action="/login">
+    <form action="/">
         <button>Go back to HomePage</button>
     </form>
 </body>
