--- a/Backend/static/unauthacc_styles.css
+++ b/Backend/static/unauthacc_styles.css
@@ -1,6 +1,31 @@
-* {
-    text-align: center;
-}
-h1{
+@import url('./config.css');
+
+body,
+html {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--dark-secondary);
+    font-size: large;
+    font-weight: bolder;
+    color: red;
     text-decoration: underline;
+}
+
+button {
+    background: none;
+    border: none;
+    color: var(--light-primary);
+    font-size: large;
+    padding: 0;
+    cursor: pointer;
+    appearance: none;
+    margin: 5px;
+    text-decoration: underline;
+    font-style: italic;
+
 }
