--- a/Backend/templates/unauthacc.html
+++ b/Backend/templates/unauthacc.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Unauthorized Access</h1>
     <form action="/login">
-        <button>Try Logging in again?</button>
+        <button>Try Logging in?</button>
     </form>
 </body>
 
